--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "facebook/graph-sdk": "5.6.2",
-        "iboldurev/dialogflow": "dev-master"
+        "iboldurev/dialogflow": "dev-master",
+        "hybridauth/hybridauth": "dev-master"
     }
 }
