--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,4 @@
 name = 'webportal'
 version = 19
 min_version = 2018
-description = 'Webportal'
+description = 'Adds a web portal to FacturaScripts.'
