Added markdown parser.

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
+        "erusev/parsedown": "dev-master",
         "hybridauth/hybridauth": "dev-master"
     }
 }
