--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,4 @@
-description = 'Adds a web portal to FacturaScripts.'
+description = 'Convierte a FacturaScripts en un portal web.'
 min_version = 2018.012
 name = 'webportal'
-version = 0.95
+version = 0.96
