--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/FacturaScripts/webportal#readme",
   "dependencies": {
-    "spectre.css": "^0.5.x",
-    "summernote": "^0.8.x",
-    "easymde": "^2.4.x"
+    "easymde": "^2.5.1",
+    "spectre.css": "^0.5.8",
+    "summernote": "^0.8.11"
   }
 }
